feat: add hero section,

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
 
 	<header></header>
+	<sectionid="hero">
+	<h1>Develop hero section by dev_a</h1>
+</section>
 	
 	<main>
 		<sectionid="hero"></section>
