feat: add benefits section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 	<main>
 		<sectionid="hero"></section>
-		<sectionid="benefits"></section>
+		<sectionid="benefits"><h1>Develop hero section by dev_b</h1></section>
 		<sectionid="primary-cta"></section>
 		<sectionid="features"></section>
 		<sectionid="visual-showcase"></section>
