--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<sectionid="hero"></section>
 		<sectionid="benefits"><h1>Develop hero section by dev_b</h1></section>
 		<sectionid="primary-cta"></section>
-		<sectionid="features"></section>
+		<sectionid="features"><h1>Develop features overview section by dev_b</h1></section>
 		<sectionid="visual-showcase"></section>
 		<sectionid="social-proof"></section>
 		<sectionid="final-cta"></section>
