--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 		<sectionid="social-proof"></section>
 		<sectionid="final-cta"></section>
 	</main>
-	
+	<sectionid="visual-showcase">
+	<h1>Develop visual showcase section by dev_a</h1>
+</section>
 	<footer></footer>
 
 </body>
