feat: add footer section ,

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 		<sectionid="final-cta"></section>
 	</main>
 	
-	<footer></footer>
+	<footer>
+		<h1>Develop footer section by dev_b</h1>
+	</footer>
 
 </body>
 </html>
