add final cta section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		<sectionid="social-proof"></section>
 		<sectionid="final-cta"></section>
 	</main>
+	<sectionid="final-cta">
+	<h1>Develop final CTA section by dev_a</h1>
+</section>
 	
 	<footer></footer>
 
